[project]
name = "e-hype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cdsapi>=0.7.7",
    "dask>=2024.8.0",
    "geopandas>=1.0.1",
    "h5netcdf>=1.8.1",
    "ipykernel>=6.31.0",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "plotly>=6.6.0",
    "pooch>=1.9.0",
    "shapely>=2.0.7",
    "xarray>=2024.7.0",
]
